syntax = "proto3";

package repo.namespace.v1;

option go_package = "github.com/aide-family/sovereign/pkg/repo/namespace/v1;namespacev1";

import "enum/enum.proto";

service NamespaceService {
    rpc CreateNamespace(CreateNamespaceRequest) returns (NamespaceModel);
    rpc GetNamespace(GetNamespaceRequest) returns (NamespaceModel);
    rpc UpdateNamespace(UpdateNamespaceRequest) returns (ResultInfo);
    rpc DeleteNamespace(DeleteNamespaceRequest) returns (ResultInfo);
    rpc ListNamespace(ListNamespaceRequest) returns (ListNamespaceResponse);
    rpc SelectNamespace(ListNamespaceRequest) returns (SelectNamespaceResponse);
    rpc UpdateNamespaceStatus(UpdateNamespaceStatusRequest) returns (ResultInfo);
    rpc GetNamespaceByName(GetNamespaceByNameRequest) returns (NamespaceModel);
}

message NamespaceModel {
    uint32 id = 1;
    int64 uid = 2;
    string name = 3;
    map<string, string> metadata = 4;
    sovereign.enum.GlobalStatus status = 5;
    int64 createdAt = 6;
    int64 updatedAt = 7;
    int64 deletedAt = 8;
    int64 creator = 9;
}

message NamespaceItemSelect {
    int64 value = 1;
    string label = 2;
    bool disabled = 3;
    string tooltip = 4;
}

message CreateNamespaceRequest {
    string name = 1;
    map<string, string> metadata = 2;
    sovereign.enum.GlobalStatus status = 3;
}

message GetNamespaceRequest {
    int64 uid = 1;
}

message UpdateNamespaceRequest {
    int64 uid = 1;
    string name = 2;
    map<string, string> metadata = 3;
}
message ResultInfo {
    int64 rowsAffected = 1;
    string error = 2;
}

message DeleteNamespaceRequest {
    int64 uid = 1;
}

enum Order {
    ASC = 0;
    DESC = 1;
}

enum Field {
    UID = 0;
    ID = 1;
    NAME = 2;
    METADATA = 3;
    STATUS = 4;
    CREATED_AT = 5;
    UPDATED_AT = 6;
    DELETED_AT = 7;
    CREATOR = 8;
}

message ListNamespaceRequest {
    int32 page = 1;
    int32 pageSize = 2;
    string keyword = 3;
    sovereign.enum.GlobalStatus status = 4;
    Field orderBy = 5;
    Order order = 6;
}
message ListNamespaceResponse {
    repeated NamespaceModel namespaces = 1;
    int64 total = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message SelectNamespaceRequest {
    string keyword = 1;
    int32 limit = 2;
    int64 lastUID = 3;
    sovereign.enum.GlobalStatus status = 4;
    Order order = 5;
}
message SelectNamespaceResponse {
    repeated NamespaceItemSelect items = 1;
    int64 total = 2;
    int64 lastUID = 3;
    bool hasMore = 4;
}

message UpdateNamespaceStatusRequest {
    int64 uid = 1;
    sovereign.enum.GlobalStatus status = 2;
}

message GetNamespaceByNameRequest {
    string name = 1;
}